Project pdf_cache {
  database_type: 'PostgreSQL'
  Note: '''
    프론트 표시용 PDF 캐시 + OCR 추출 결과 검토용 DB.
    K-RIGHTS 메인 DB(mindex_remastered.dbml)와는 물리적으로 분리된 별도 인스턴스이며
    메인 DB에 대한 FK는 없다.

    스키마는 `docs/ocr 파이프라인 핵심 내용 추출 field.md`의
    Compact DB Projection(k-rights.contract-extraction.v0.1)을 반영한다.
    Grant/Party/Payment/Evidence 단위까지만 테이블로 분리하고,
    그 안의 배열·중첩 필드(subjects, legal_right.values, territory.definitions,
    scope_modifiers, evidence.targets 등)는 JSONB로 그대로 보존한다.
    이 DB는 캐시·검토용이며, 검증·정규화된 최종 데이터는 save_rights_batch()를 통해
    메인 DB의 contract/contract_history/rights_grant로 별도 적재된다.
  '''
}

Enum field_status_kind {
  PRESENT_EXPLICIT
  PRESENT_DERIVED
  UNRESOLVED
  ABSENT
  EXTERNAL_REFERENCE
}

Enum document_language_kind {
  KO
  EN
  JP
}

Enum party_role_kind {
  GRANTOR
  GRANTEE
}

Table pdf_cache {
  id         BIGSERIAL [pk]
  file_path  TEXT [not null, note: '로컬 파일시스템 경로']
  raw_text   TEXT [note: 'PDF에서 파싱된 원문 텍스트']
  created_at TIMESTAMPTZ [not null, default: `now()`]

  Note: '프론트 표시용 PDF 캐시. 메인 K-RIGHTS DB와 별개 인스턴스, FK/참조 없음.'
}

Table contract_extraction {
  id                    BIGSERIAL [pk]
  pdf_cache_id          BIGINT [not null, note: 'ref: pdf_cache.id — 같은 DB 내 FK']
  schema_version        TEXT [not null, note: '예: k-rights.contract-extraction.v0.1']
  source_document_ref   TEXT [note: '호출자가 부여한 opaque reference. DB ID 아님']
  document_language     document_language_kind

  title                 JSONB [note: 'FieldResult<string> {field_status, value, raw_expression}']
  agreement_type        JSONB [note: 'FieldResult<DIRECT_LICENSE|SUBLICENSE>']
  agreement_date        JSONB [note: 'FieldResult<YYYY-MM-DD>']

  created_at            TIMESTAMPTZ [not null, default: `now()`]

  Note: '계약서 한 건(PDF 한 건)에 대한 OCR/AI 추출 결과 헤더. contract.parties/rights_grants/payments/evidence는 하위 테이블로 분리.'
}

Table party {
  id                      BIGSERIAL [pk]
  contract_extraction_id  BIGINT [not null]
  role                    party_role_kind
  name                    TEXT
  field_status            field_status_kind [not null]
  raw_expression          TEXT

  Note: 'contract.parties[]. 주소·등록번호·대표자·서명자·연락처는 1차 범위 제외.'
}

Table rights_grant {
  id                      BIGSERIAL [pk]
  contract_extraction_id  BIGINT [not null]
  grant_ref               TEXT [not null, note: '페이로드 내 임시 참조값. 예: grant-1. 영속 ID 아님']

  content                 JSONB [note: '{field_status, subjects[{subject_type,title,scope_type,relationship_type}], raw_expression}']
  legal_right             JSONB [note: '{field_status, values[], raw_expression}']
  exploitation_mode       JSONB [note: '{field_status, values[], raw_expression}']
  territory               JSONB [note: '{field_status, values[], excluded_values[], definitions[{term,members[]}], raw_expression}']
  license_period          JSONB [note: '{field_status, start, end, raw_expression}']
  exclusivity             JSONB [note: '{field_status, value, raw_expression}']
  authority_constraints   JSONB [note: '{field_status, may_sublicense, allowed_recipient_types[], target_recipient_type, raw_expression}']
  scope_modifiers         JSONB [note: '[{modifier_type, dimension, field_status, values[], raw_expression}]']

  Indexes {
    (contract_extraction_id, grant_ref) [unique]
  }

  Note: 'contract.rights_grants[]. 하나의 Grant = 함께 부여/제한되는 권리 묶음(기간·독점성·authority·주요 modifier가 같으면 한 Grant).'
}

Table payment {
  id                      BIGSERIAL [pk]
  contract_extraction_id  BIGINT [not null]
  payment_ref             TEXT [not null, note: '페이로드 내 임시 참조값. 예: payment-1']
  amount                  NUMERIC [note: '소수점 문자열 원문 그대로가 아니라 NUMERIC으로 저장']
  currency                CHAR(3) [note: 'ISO 4217 코드. 예: KRW, USD, JPY']

  Indexes {
    (contract_extraction_id, payment_ref) [unique]
  }

  Note: 'contract.payments[]. 지급일·milestone·비율·환율·세금·revenue share는 1차 추출 범위 아님.'
}

Table evidence {
  id                      BIGSERIAL [pk]
  contract_extraction_id  BIGINT [not null]
  evidence_ref            TEXT [not null, note: '페이로드 내 임시 참조값. 예: evidence-1']
  labels                  TEXT[] [note: '해당 문언이 수행하는 clause function 목록']
  targets                 JSONB [not null, note: '[{target_type, target_ref, field}] — 이 Evidence가 뒷받침하는 Grant/Payment/계약 필드']
  text                    TEXT [not null, note: '계약서 exact text']
  section                 TEXT [note: '조항 번호·제목 또는 별지']
  page_start              INT
  page_end                INT
  start_char              INT [note: 'canonical text 기준 offset. UTF-8/LF/코드포인트, start 포함']
  end_char                INT [note: 'canonical text 기준 offset. end 미포함']

  Indexes {
    (contract_extraction_id, evidence_ref) [unique]
  }

  Note: 'contract.evidence[]. targets를 통해 어느 rights_grant/payment/계약 필드를 입증하는지 연결.'
}

Ref: contract_extraction.pdf_cache_id > pdf_cache.id
Ref: party.contract_extraction_id > contract_extraction.id
Ref: rights_grant.contract_extraction_id > contract_extraction.id
Ref: payment.contract_extraction_id > contract_extraction.id
Ref: evidence.contract_extraction_id > contract_extraction.id
